Business logic added - stats for conditions.
