# models/requirements.go
@@ -1,145 +1,0 @@
-package models
-
-import (
-	"errors"
-	"fmt"
-	"reflect"
-	"strings"
-
-	"github.com/astaxie/beego/orm"
-)
-
-type Requirements struct {
-	Id              int      `orm:"column(id);pk"`
-	PlanId          *Plans   `orm:"column(plan_id);rel(fk)"`
-	MetricId        *Metrics `orm:"column(metric_id);rel(fk)"`
-	Name            string   `orm:"column(name)"`
-	Description     string   `orm:"column(description);null"`
-	MetricValue     float64  `orm:"column(metric_value)"`
-	MetricCondition string   `orm:"column(metric_condition);null"`
-}
-
-func (t *Requirements) TableName() string {
-	return "requirements"
-}
-
-func init() {
-	orm.RegisterModel(new(Requirements))
-}
-
-func AddRequirements(m *Requirements) (id int64, err error) {
-	o := orm.NewOrm()
-	id, err = o.Insert(m)
-	return
-}
-
-func GetRequirementsById(id int) (v *Requirements, err error) {
-	o := orm.NewOrm()
-	v = &Requirements{Id: id}
-	if err = o.Read(v); err == nil {
-		return v, nil
-	}
-	return nil, err
-}
-
-func GetAllRequirements(query map[string]string, fields []string, sortby []string, order []string,
-	offset int64, limit int64) (ml []interface{}, err error) {
-	o := orm.NewOrm()
-	qs := o.QueryTable(new(Requirements))
-
-	for k, v := range query {
-
-		k = strings.Replace(k, ".", "__", -1)
-		if strings.Contains(k, "isnull") {
-			qs = qs.Filter(k, (v == "true" || v == "1"))
-		} else {
-			qs = qs.Filter(k, v)
-		}
-	}
-
-	var sortFields []string
-	if len(sortby) != 0 {
-		if len(sortby) == len(order) {
-
-			for i, v := range sortby {
-				orderby := ""
-				if order[i] == "desc" {
-					orderby = "-" + v
-				} else if order[i] == "asc" {
-					orderby = v
-				} else {
-					return nil, errors.New("Error: Invalid order. Must be either [asc|desc]")
-				}
-				sortFields = append(sortFields, orderby)
-			}
-			qs = qs.OrderBy(sortFields...)
-		} else if len(sortby) != len(order) && len(order) == 1 {
-
-			for _, v := range sortby {
-				orderby := ""
-				if order[0] == "desc" {
-					orderby = "-" + v
-				} else if order[0] == "asc" {
-					orderby = v
-				} else {
-					return nil, errors.New("Error: Invalid order. Must be either [asc|desc]")
-				}
-				sortFields = append(sortFields, orderby)
-			}
-		} else if len(sortby) != len(order) && len(order) != 1 {
-			return nil, errors.New("Error: 'sortby', 'order' sizes mismatch or 'order' size is not 1")
-		}
-	} else {
-		if len(order) != 0 {
-			return nil, errors.New("Error: unused 'order' fields")
-		}
-	}
-
-	var l []Requirements
-	qs = qs.OrderBy(sortFields...)
-	if _, err = qs.Limit(limit, offset).All(&l, fields...); err == nil {
-		if len(fields) == 0 {
-			for _, v := range l {
-				ml = append(ml, v)
-			}
-		} else {
-
-			for _, v := range l {
-				m := make(map[string]interface{})
-				val := reflect.ValueOf(v)
-				for _, fname := range fields {
-					m[fname] = val.FieldByName(fname).Interface()
-				}
-				ml = append(ml, m)
-			}
-		}
-		return ml, nil
-	}
-	return nil, err
-}
-
-func UpdateRequirementsById(m *Requirements) (err error) {
-	o := orm.NewOrm()
-	v := Requirements{Id: m.Id}
-
-	if err = o.Read(&v); err == nil {
-		var num int64
-		if num, err = o.Update(m); err == nil {
-			fmt.Println("Number of records updated in database:", num)
-		}
-	}
-	return
-}
-
-func DeleteRequirements(id int) (err error) {
-	o := orm.NewOrm()
-	v := Requirements{Id: id}
-
-	if err = o.Read(&v); err == nil {
-		var num int64
-		if num, err = o.Delete(&Requirements{Id: id}); err == nil {
-			fmt.Println("Number of records deleted in database:", num)
-		}
-	}
-	return
-}
